--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,7 @@
 		<title></title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
 		<link href="fonts/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
 		<link href="css/bootstrap-3.1.1.min.css" rel="stylesheet">
 		<link href="css/lollies.min.css" rel="stylesheet">
 		<link href="css/custom.css" rel="stylesheet">
@@ -20,6 +21,7 @@
 						
 								<header id="main-header">
 			<div class="container">
+
 				<div class="row">
 					<div class="col-md-6 headerMatch">
 						<!-- LOGO -->
@@ -39,8 +41,9 @@
 								-->
 								<!-- CALL TO ACTION -->
 								<!--<div class="call"><h1>Lorem ipsum 1800123123</h1><p>Consectetur adipiscing elit</p></div>-->
-								
-							</div>
+
+
+                            </div>
 						</div>
 					</div>
 				</div>
@@ -64,7 +67,7 @@
 							<div class="navbar-collapse collapse">
 								<ul class="nav navbar-nav nav-justified">
 									<li class="active"><a href="#">Nav Item 1</a></li>
-									<li><a href="#">Nav Item 2</a></li>
+									<li><a href="registration.html">REGISTER!</a></li>
 									<li><a href="#">Nav Item 3</a></li>
 									<li><a href="#">Nav Item 4</a></li>
 									<li><a href="#">Nav Item 5</a></li>
