email sending block+object creating

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,7 +67,7 @@
 							<div class="navbar-collapse collapse">
 								<ul class="nav navbar-nav nav-justified">
 									<li class="active"><a href="#">Nav Item 1</a></li>
-									<li><a href="registration.html">REGISTER!</a></li>
+									<li><a href="reg.jsp">REGISTER!</a></li>
 									<li><a href="#">Nav Item 3</a></li>
 									<li><a href="#">Nav Item 4</a></li>
 									<li><a href="#">Nav Item 5</a></li>
